# Discovering_Folding_Lines_for_Surface_Compression

./: .gitignore  .gitmodules  Angle_sub.cpp  CMakeLists.txt  Closeness.cpp  Constraint.cpp  EdgeFlip.h  Isometry.cpp  LICENSE  LocalICP.cpp  LocalICP.h  README.md  SymmetricDirichlet.cpp  SymmetricDirichlet.h  Uniform.h  test_collision.cpp
cmake/: libigl.cmake
python/: color.py  energy_stress.py  force.py  mpm.py  readObj.py
results/bunny_1/: deformed_200000.txt  undeformed_200000.txt
src/: Adam.h  Angle.cpp  Angle.h  Angle_sub.cpp  Angle_sub.h  Boundary.cpp  Boundary.h  Closeness.cpp  Closeness.h  ConnectFold.cpp  ConnectFold.h  Constraint.cpp  Constraint.h  EdgeCollapse.cpp  EdgeCollapse.h  EdgeFlip.cpp  Isometry.cpp  Isometry.h  Optimization.cpp  Optimization.h  SelfCollision.cpp  SelfCollision.h  SymmetricDirichlet.cpp  SymmetricDirichlet.h  Uniform.cpp  Uniform.h  Visualization.cpp  data.h  main.cpp
